# hasher

./: .gitignore  Cargo.toml  README.md
examples/: data.json
src/: args.rs  command_line_args.rs  hash.rs  logger.rs  main.rs  tools.rs
