[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
rayon = "1.7.0"

crc = "3.0.1"
sha2 = "0.10.7"
base64 = "0.21.2"
filesize = "0.2.0"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.37"

iter-set = "2.0.2"
itertools = "0.11.0"
